src/objects/Apttus__IDEProvision__c.object
<CustomObject>
    <description>Holds information about one or more provisions supported by the IDE provider</description>
    <fields>
        <fullName>Apttus__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>The active indicator for the IDE provision</description>
        <inlineHelpText>Please use this indicator to enable or disable the IDE provision</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__BaseObject__c</fullName>
        <description>Base object for which field is getting mapped</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please provide base object for which field is getting mapped</inlineHelpText>
        <label>Base Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <description>The provision description</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The provision description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__FieldNumber__c</fullName>
        <description>The IDE field number</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The IDE field number</inlineHelpText>
        <label>Field Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__IDEName__c</fullName>
        <description>The name of the IDE provider</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>The name of the IDE provider</inlineHelpText>
        <label>IDE Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__MetaDataFieldId__c</fullName>
        <description>Meta Data Field</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please provide metadata field for which provision field is getting mapped</inlineHelpText>
        <label>Meta Data Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ProvisionType__c</fullName>
        <description>Type of provision</description>
        <inlineHelpText>Please select provision type</inlineHelpText>
        <label>Provision Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Clause</fullName>
                </value>
                <value>
                    <fullName>Field</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__TemplateReferenceId__c</fullName>
        <description>Template Reference ID</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please provide Template Reference ID for the clause</inlineHelpText>
        <label>Template Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IDE Provision</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IDE Provisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>